# ChangeLog for dev-python/cgkit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cgkit/ChangeLog,v 1.19 2007/11/13 06:55:42 opfer Exp $

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  cgkit-2.0.0_alpha7.ebuild:
  stable x86, bug 198239

  06 Nov 2007; Ali Polatel <hawking@gentoo.org> -cgkit-1.1.0.ebuild,
  -cgkit-2.0.0_alpha5.ebuild, -cgkit-2.0.0_alpha6.ebuild,
  cgkit-2.0.0_alpha7.ebuild:
  fix quoting. drop old.

  28 Mar 2007; Christian Faulhammer <opfer@gentoo.org> cgkit-1.2.0.ebuild:
  force a file to be regenerated, so compilation with GCC 4 succeeds. Fixes
  bug 152210, reported by Andy <andyreif@studcs.uni-sb.de>

*cgkit-2.0.0_alpha7 (15 Feb 2007)

  15 Feb 2007; Chris Bainbridge <chrb@gentoo.org>
  +cgkit-2.0.0_alpha7.ebuild:
  Version bump.

*cgkit-2.0.0_alpha6 (14 Aug 2006)

  14 Aug 2006; Chris Bainbridge <chrb@gentoo.org>
  +cgkit-2.0.0_alpha6.ebuild:
  version bump

  19 Mar 2006; Mark Loeser <halcy0n@gentoo.org> cgkit-1.1.0.ebuild,
  cgkit-1.2.0.ebuild:
  Add DEPEND on app-arch/unzip

  17 Feb 2006; <chrb@gentoo.org> -cgkit-2.0.0_alpha3-r2.ebuild,
  cgkit-2.0.0_alpha5.ebuild:
  use old ogre so cgkit compiles - bug #123034

*cgkit-2.0.0_alpha5 (22 Nov 2005)

  22 Nov 2005; <chrb@gentoo.org> +cgkit-2.0.0_alpha5.ebuild:
  bump

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

  05 May 2005; Sven Wegener <swegener@gentoo.org>
  cgkit-2.0.0_alpha3-r2.ebuild:
  Added missing parentheses to *DEPEND.

  30 Apr 2005; Chris Bainbridge <chrb@gentoo.org>
  cgkit-2.0.0_alpha3-r2.ebuild:
  License change to LGPL.

*cgkit-2.0.0_alpha3-r2 (30 Apr 2005)

  30 Apr 2005; Chris Bainbridge <chrb@gentoo.org>
  -cgkit-2.0.0_alpha3.ebuild, -cgkit-2.0.0_alpha3-r1.ebuild,
  +cgkit-2.0.0_alpha3-r2.ebuild:
  Fixed problems building with lib3ds and ogre support.

*cgkit-2.0.0_alpha3-r1 (22 Apr 2005)
