@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST cgkit-1.2.0-doc.zip 92290 RMD160 6c497b4dde73765a528e25e2a1613b3115c036ea SHA1 69fe08dee3f736a3d9637f98e0b0f8b9366342f3 SHA256 42346c12d1b82302c2d3d413a856ba4211d03574b3c682cf6a3a5b92b2b7020e
 DIST cgkit-1.2.0.zip 231492 RMD160 ff9f6714d8957e190854158e7146f13b7d399f39 SHA1 89d3cbc65837806b76f4038094348ba03e32af37 SHA256 d793402f39e3115070a945166a27366898801c9f56d8c8d13149f5a36f513980
 DIST cgkit-2.0.0alpha7.tar.gz 694973 RMD160 4600e8e0009e6276a5201f44512ebbf00c357fc0 SHA1 18b7b30ea0b4a0931117586717dc512d0826f6a9 SHA256 1f667ceacec02557c7a4de5fccb741bc06fae9369e3a5432b45468035fea38e4
+DIST cgkit-2.0.0alpha8.tar.gz 740289 RMD160 91c9d906f6cf4eff00fc70db97906aab10c942fe SHA1 56c18a9234596971267e02017b8c13e17f93f895 SHA256 bb45524a9ad0c38299fa1c333c532968a2dcb1a51498cfd3f40700dfbd505e89
 EBUILD cgkit-1.2.0.ebuild 1053 RMD160 bef4b92cd63143ad8ea2db9a25372afd62970a34 SHA1 7db1c22a4696ff9c1f1c09a9a77b97a48f9a9c53 SHA256 1bc6380e0aaf852a04bd343b67da2d3fadca226722a3aba92e94ce8e4c37e0b6
 EBUILD cgkit-2.0.0_alpha7.ebuild 1452 RMD160 b9f471b39d368eeda5100ba1fb200c30645a6578 SHA1 7a6b7fcaf5ac10c5b9a92e2bdf11563124ba6b56 SHA256 1528995a25c670da3bab17db24d14b72f0c3ffafd6dbd9c3a055f5c54cdf1096
-MISC ChangeLog 2864 RMD160 c6da99809d8cc109ec4f8aa0666ce047138b5d14 SHA1 00f806615225eb61f9806cd86d28b266a6dbbd63 SHA256 e947ee33b982b4408bd6bf461c03ba33620050918bc56da648ce10fb9a161350
+EBUILD cgkit-2.0.0_alpha8.ebuild 1736 RMD160 a916e9a4015e2a8ca38ab82f41409248de04d8d4 SHA1 6d54021d6299030a112e96f99f80e936cf1507a4 SHA256 b6881644dee19296f5d9c9fb275061719d35d32348a4ce28df965db94adad0c7
+MISC ChangeLog 3045 RMD160 7ebe7b96de77d3a3a7052070a3ee9febed53a1c1 SHA1 e7fc9a36ad2e4d460f64dee430c3ad33bc501f81 SHA256 ca493425bf6aade16e04fb18559ae4f83dc8988533d356f067b90647a295654b
 MISC metadata.xml 358 RMD160 5b7290c1aa4e9c13306320945f4d5bb7ba145632 SHA1 a306d9e08eff5aef6b5ffe16b6cce06a3ede7df5 SHA256 1fd42ea77238711d25764adbb766770851f7e9e5dc0dfe5eab13ab2150e0e383
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkf4v44ACgkQQU4yORhF8iArFQCfWWMuMClp9dwFjLZICu35gnxD
+HnQAoMj954jHfDQM1kDswqoKGoTCrytH
+=KtdJ
+-----END PGP SIGNATURE-----
